public/css/main.css
@font-face {
	font-family: colorsofautumn;
	src: url('ColorsOfAutumn.ttf');
}

@font-face {
	font-family: league;
	src: url('LeagueGothic-Regular.otf');
}

body { 
	background: url(../images/Mount_Everest.jpg) no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}

h1 {
	font-family: colorsofautumn;
	font-size: 60px;
	color: #FFFFFF;
	position: absolute;
	top: 100px;
	left: 280px;
}

h2 {
	font-family: 'Nothing You Could Do', cursive;
	font-size: 30px;
	color: #FFFFFF;
	position: absolute;
	top: 190px;
	left: 280px;
}

#photo {
	position: absolute;
	top: 96px;
	left: 100px;
}

#githubphoto {
	height: 25px;
	width: 25px;
	position:absolute;
	top: 40px;
	left: 1000px;
}

#linkedinphoto {
	height: 30px;
	width: 30px;
	position:absolute;
	top: 40px;
	left: 1050px;
}

#gmailphoto {
	height: 38px;
	width: 38px;
	position:absolute;
	top: 35px;
	left: 1100px;
}

a {
	color: #FFFFFF;
}

#aboutme {
	font-family: league;
	font-size: 40px;
	color: #FFFFFF;
	position: absolute;
	top: 100px;
	left: 1000px;
}

#projects {
	font-family: league;
	font-size: 40px;
	color: #FFFFFF;
	position: absolute;
	top: 150px;
	left: 1000px;
}

#resume {
	font-family: league;
	font-size: 40px;
	color: #FFFFFF;
	position: absolute;
	top: 200px;
	left: 1000px;
}

#blog {
	font-family: league;
	font-size: 40px;
	color: #FFFFFF;
	position: absolute;
	top: 250px;
	left: 1000px;
}

#contactme {
	font-family: league;
	font-size: 40px;
	color: #FFFFFF;
	position: absolute;
	top: 300px;
	left: 1000px;
}
/*#bg {
	position:fixed; 
	top:-50%; 
	left:-50%; 
	width:200%; 
	height:200%;
}
#bg img {
	position:absolute; 
	top:0; 
	left:0; 
	right:0; 
	bottom:0; 
	margin:auto; 
	min-width:50%;
	min-height:50%;
}*/

/*img.bg {
  height:auto;
  left:0;
  min-height:100%;
  min-width:1024px;
  position:fixed;
  top:0;
  width:100%;
}*/

/*img.bg {
  left:50%;
  margin-left:-512px;
}*/

/*h1 {
	font-size: 50px; 
	margin: 30px; 
	color: #444444; 
	position: absolute; 
	top: 300px; 
	left: 50px;
	width: 100%;
}

h2 {
	font-size: 50px; 
	margin: 30px; 
	color: #444444; 
	position: absolute; 
	top: 400px; 
	left: 50px;
	width: 100%;
}

h1 {
	font-size: 50px; 
	margin: 30px; 
	color: #444444; 
	position: absolute; 
	top: 500px; 
	left: 50px;
	width: 100%;
}*/

